# CCompiler

./: .gitignore  1.c  CMakeLists.txt  README.md  TAGS  a.out  ast.c  ast.h  cc  grammar  lexer.c  lexer.h  main.c  main.out  makefile  map.c  map.h  mapping  parser.c  parser.h  preprocessor.h  reader.c  reader.h  rules  s_table.c  s_table.h  symbol.c  symbol.h  table  test  testgram  testlexer  testparser  testtoken  token.c  token.h  utils.c  utils.h  vector.c  vector.h
include/: ast.h  s_table.h  semantic.h  token.h  utils.h  vector.h
parser_lexer_generator/: grammar.py  lexemes  lexer_generator.py  mapping  parser_core.c  parser_core.h  parser_generator.py  table
src/: ast.c  lexer.c  main.c  parser.c  preprocessor.c  s_table.c  semantic.c  token.c  utils.c  vector.c
test/: big  block  declar  expr  fnc  if  while
